<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Whenapp</string>
    <string name="title_section1">Home</string>
    <string name="title_section2">Your moments</string>
    <string name="title_section3">Map</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_events">Your Moments</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_map">In a Map</string>
    <string name="title_activity_list">Your Moment</string>

    <color name="blue">#5555ff</color>

    <string name="title_activity_country_detail">CountryDetailActivity</string>
    <string name="title_activity_country_details">CountryDetailsActivity</string>
    <string name="action_search">Search</string>
    <string name="action_new">Add New</string>
    <string name="title_activity_add_new">AddNewActivity</string>
    <string name="your_moment">Your moment:</string>
    <string name="date">Date:</string>
    <string name="time">Time:</string>
    <string name="set">Set</string>
    <string name="maps_api">AIzaSyDpT2u-0gX8jAZ6XlD7m1P7U1_QuOqFElU</string>
    <string name="location">Location:</string>
    <string name="load_picture">Load Picture</string>
    <string name="image">Image</string>
    <string name="image_list">Moment image in list</string>
    <string name="detail_image">Imagen de detalle</string>
    <string name="item_image">Item Image</string>
    <string name="set_date">Set date</string>
    <string name="set_time">Set time</string>
    <string name="action_save">Save</string>
    <string name="action_share">Share</string>
    <string name="action_share_twitter">Twitter</string>
    <string name="action_share_facebook">Facebook</string>
    <string name="action_share_email">Email</string>
    <string name="album_name">Whenapp Album</string>
    <string name="title_activity_import">ImportActivity</string>
    <string name="latest_moments">Your latest moments:</string>
    <string name="record_video">Record Video</string>
    <string name="no_moments">There are no moments yet. You can add your first moment pushing the following button.</string>
    <string name="title_activity_video">Your Video</string>
    <string name="view_video">Watch Video</string>

</resources>