<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.renefernandez.whenapp.CountryDetailActivity" >

    <item
        android:id="@+id/action_share_twitter"
        android:orderInCategory="0"
        android:showAsAction="ifRoom"
        app:showAsAction="ifRoom"
        android:title="@string/action_share_twitter"/>
    
    <item
        android:id="@+id/action_share_facebook"
        android:orderInCategory="0"
        android:showAsAction="ifRoom"
        app:showAsAction="ifRoom"
        android:title="@string/action_share_facebook"/>
    
    <item
        android:id="@+id/action_share_email"
        android:orderInCategory="0"
        android:showAsAction="ifRoom"
        app:showAsAction="ifRoom"
        android:title="@string/action_share_email"/>

</menu>
